--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,21 @@
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+:root {
+  font-size: 20px;
+  box-sizing: inherit;
 }
 
-.App-link {
-  color: #61dafb;
-}
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-p {
+.App {
+  font-family: monotype;
+  text-align: center;
+  color: rgb(61, 233, 113);
+}
+
+.p {
   margin: 0;
 }
 
@@ -35,14 +32,17 @@ p:not(:last-child) {
   margin-bottom: 8px;
 }
 
-.body {
+body {
   font: 22px "monospace";
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #53f9e7;
+  background: radial-gradient(circle, #9c8fd2 0%, #d3fbf6 100%) center / cover
+    no-repeat fixed;
   min-height: 100vh;
   padding: 30px;
-  text-align: center;
+  color: #fc466b;
 }
 
 .card {
@@ -51,12 +51,12 @@ p:not(:last-child) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 35px;
-  text-align: center;
-  border: 2px solid rgba(26, 15, 146, 0.884);
+  border: 5px solid rgba(9, 9, 9, 0.884);
   border-radius: 20px;
-  background-color: rgb(215, 200, 236);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(10px);
 }
@@ -75,24 +75,24 @@ p:not(:last-child) {
   margin-bottom: 5px;
 }
 
-.header input:focus {
-  background-color: rgb(77, 101, 240, 0.897);
+header input:focus {
+  background-color: rgba(77, 101, 240, 0.897);
 }
 
 .location .date {
-  color: rgb (77, 101, 240, 0.897);
+  color: rgb(193, 113, 113);
   font-size: 23px;
 }
 
 .current .temp {
-  color: #fff;
+  color: #470093;
   font-size: 102px;
   font-weight: 900;
   margin: 30px 0px;
   text-shadow: 4px 10px rgb(92, 127, 241);
 }
 
-.curent .temp span {
+.current .temp span {
   font-weight: 500;
 }
 
@@ -100,7 +100,7 @@ p:not(:last-child) {
   color: #fc466b;
   font-size: 28px;
   font-weight: 700;
-  font-style: italics;
+  font-style: italic;
   margin-bottom: 20px;
   text-shadow: 0px 4px rgba(77, 101, 240, 0.897);
 }
@@ -119,31 +119,11 @@ p:not(:last-child) {
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.3),
-    rgba 0,
-    0,
-    0,
-    0.6
+    rgba(0, 0, 0, 0.6)
   );
 }
 
-.header {
+header {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 50px 15px 15px;
-}
-
-.header input {
-  width: 100%;
-  max-width: 280px;
-  padding: 10px 25px;
-  align-items: center;
-  border: none;
-  outline: none;
-  background-color: rgb(255, 255, 255);
-  border-radius: 16px 0px 16px 0px;
-  border-bottom: 6px solid rgba(19, 159, 240, 0.815);
-  font-size: 20px;
-  font-weight: 300;
-  transition: 0.2s ease-out;
 }
