--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,19 @@
-:root {
-  font-size: 20px;
-  box-sizing: inherit;
-}
-
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-.App {
-  font-family: monotype;
-  text-align: center;
-  color: rgb(61, 233, 113);
-}
-
-.p {
+p {
   margin: 0;
 }
 
-.main {
-  flex: 1 1 100%;
+#units {
+  text-align: center;
+}
+
+main {
+  flex: 1 2 100%;
   padding: 25px 15px 50px;
   display: flex;
   flex-direction: column;
@@ -37,26 +30,25 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: radial-gradient(circle, #9c8fd2 0%, #d3fbf6 100%) center / cover
-    no-repeat fixed;
+  background-color: #f08080;
   min-height: 100vh;
   padding: 30px;
-  color: #fc466b;
 }
 
 .card {
   max-width: 450px;
   min-height: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-image: url("./src/images/pinksunpic.jpg");
+  background-image: url("images/pinksunpic.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 35px;
-  border: 5px solid rgba(9, 9, 9, 0.884);
+  border: 2px solid rgba(42, 113, 219, 0.884);
   border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.575);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(10px);
 }
@@ -80,12 +72,12 @@ header input:focus {
 }
 
 .location .date {
-  color: rgb(193, 113, 113);
+  color: rgb(77, 101, 240, 0.897);
   font-size: 23px;
 }
 
 .current .temp {
-  color: #470093;
+  color: #fff;
   font-size: 102px;
   font-weight: 900;
   margin: 30px 0px;
@@ -123,7 +115,14 @@ header input:focus {
   );
 }
 
-header {
+.header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 50px 15px 15px;
+}
+
+.header input {
+  width: 100%;
+  max-width: 280px;
 }
